# complexvar-benchmark

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CROSS_VALIDATION_BUG_REPORT.md  CV_BUG_RESOLUTION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  REVIEWER_FINAL_VERIFICATION.md  REVIEWER_UPDATE_MESSAGE.md  Snakefile  environment.yml  fix_crossval.py  fix_cv_dim.py  fix_cv_indexing.py  fix_cv_indexing_again.py  fix_ptr.py  force_cpu.py  pyproject.toml  scratch.py
configs/: labels.yaml  models.yaml  workflow.yaml
data/: README.md
data/manifests/: clinvar_download_manifest.tsv  download_manifest.tsv  download_summary.json  skempi_normalized.tsv  skempi_pdb_manifest.tsv  toy_label_manifest.tsv  toy_split_manifest.tsv  toy_variant_manifest.tsv
deliverables/: README.md  final_audit.md
deliverables/ablation_results/: ablation_results.json
deliverables/hybrid_results/: hybrid_results.json
docs/: compute_budget.md  data_source_verification.md  deliverables_audit.md  figure_legends.md  final_audit_template.md  label_schema.md  licensing_redistribution.md  methods_detail.md  model_spec.md  novelty_scope_memo.md  project_plan.md  release_checklist.md  reproduction.md  risk_register.md
figures/: README.md
notebooks/: README.md
scripts/: external_validation.py  generate_mock_external_validation.py  make_figures.py  package_deliverables.py  score_vus.py
tests/: test_cli.py  test_data_normalization.py  test_downloads.py  test_features.py  test_graphs.py  test_metrics.py  test_splits.py  test_text_policy.py
(+111 files in other folders)
